--- a/index.html
+++ b/index.html
@@ -92,20 +92,20 @@
                 </div>
             </div>
 
-            <div class="container text-center">
-                <div class="row text-center">
-                    <div calss ="col"> 
-                        <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/photo.JPG" alt="..." />
-                            <h4>Grace Xu</h4>
-                            <p class="text-muted">Owner + Artist</p>
-                        </div>
+            <div class="container">
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="team-member">
+                      <img class="mx-auto rounded-circle" src="assets/img/team/photo.JPG" alt="..." />
+                      <h4>Grace Xu</h4>
+                      <p class="text-muted">Owner + Artist</p>
                     </div>
-                    <div class="col">
-                        <p class="large text-muted"> Side. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
-                    </div>
-
-            </div>
+                  </div>
+                  <div class="col-md-5">
+                    <p class="large text-muted">Side. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+                  </div>
+                </div>
+              </div>
         </section>
         <!-- Portfolio Grid-->
         <section class="page-section bg-light" id="portfolio">
@@ -210,7 +210,9 @@
         </section>
         <!-- Photo Carousel --> 
         <section class="page-section bg-light" id="carousel">
-        <div id="carouselExampleFade" class="carousel slide"  data-bs-ride="carousel" style="width: 600px; height: 400px;">
+            <div class="text-center"> <h2 class="section-heading text-uppercase">More Images</h2> </div>
+            
+        <div id="carouselExampleFade" class="carousel slide mx-auto"  data-bs-ride="carousel" style="width:60%; height: 10%;">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                   <img src="assets/img/carousel/breakfastrect.jpg" class="d-block w-100" alt="cry">
@@ -343,7 +345,7 @@
                     <!--change images and links-->
                         <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/studio.aprilshowers/?hl=en" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="TikTok"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Email"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Email"><i class="fa-regular fa-envelope"></i></a>
                  </div>
             </div>
         </section>
