--- a/index.html
+++ b/index.html
@@ -344,8 +344,8 @@
                     <h2 class="section-heading text-uppercase">Stay in Touch!</h2>
                     <!--change images and links-->
                         <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/studio.aprilshowers/?hl=en" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="TikTok"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Email"><i class="fa-regular fa-envelope"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="https://www.tiktok.com/@studio.april.showers" aria-label="TikTok"><i class="fa-brands fa-tiktok"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="mailto:studio.aprilshowers2021@gmail.com" aria-label="Email"><i class="fa-regular fa-envelope"></i></a>
                  </div>
             </div>
         </section>
