--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link" href="/blogandreviews">Reviews + Blog</a></li>
                         <li class="nav-item"><a class="nav-link" href="/ourstory">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/faq">FAQs</a></li>
                         <li class="nav-item"><a class="nav-link" href="/portfolio">Portfolio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                         <li class="nav-item"><a class="nav-link" href="https://www.etsy.com/shop/StudioAprilShowers">Shop</a></li>
                     </ul>
                 </div>
